fixed the overflow-x

--- a/styles/sass/layout/_gallery-section.scss
+++ b/styles/sass/layout/_gallery-section.scss
@@ -66,7 +66,7 @@
                 img {
                     position: absolute;
                     bottom: 70%;
-                    right: 0;
+                    right: 2%;
                     width: 25%;
                 }
             }
